--- a/application.yml
+++ b/application.yml
@@ -20,7 +20,10 @@ ribbon:
 
 spring:
   rabbitmq:
-    host: rabbitmq
+    host: localhost
+    port:5672
+    username:admin
+    password:admin123456
   sleuth:
     sampler:
       percentage: 1
