--- a/application.yml
+++ b/application.yml
@@ -23,7 +23,7 @@ spring:
     host: localhost
     port: 5672
     username: admin
-    password: admin123456
+    password: 123456
   sleuth:
     sampler:
       percentage: 1
