--- a/application.yml
+++ b/application.yml
@@ -23,7 +23,7 @@ spring:
     host: localhost
     port: 5672
     username: admin
-    password: 123456
+    password: admin123456
   sleuth:
     sampler:
       percentage: 1
@@ -33,7 +33,7 @@ spring:
       skip-pattern: "^org.*HystrixStreamTask$"
 
 authserver:
-    hostname: auth-service
+    hostname: localhost
     port: 5000
     contextPath: /uaa
 
