--- a/application.yml
+++ b/application.yml
@@ -1,10 +1,10 @@
 eureka:
   instance:
-    hostname: 127.0.0.1
+    hostname: localhost
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://user:${REGISTRY_SERVER_PASSWORD:password}@127.0.0.1:8761/eureka/
+      defaultZone: http://user:${REGISTRY_SERVER_PASSWORD:password}@localhost:8761/eureka/
 
 hystrix:
   command:
