--- a/auth-service.yml
+++ b/auth-service.yml
@@ -18,5 +18,6 @@ spring:
   datasource:
     url: jdbc:h2:mem:user
     driver-class-name: org.h2.Driver
+    schema: classpath:schema.sql
   jpa:
     show-sql: true
